# z_tire_temp

./: .clangd  CMakeLists.txt  prj.conf
boards/st/vcu_stm32/: vcu_stm32.dts
include/: APPS.h  MLX90640_API.h  MLX90640_I2C_Driver.h  ThermalSensor.h  can.h  thermal_Camera.h  thermal_pipline.h  vehicle_state.h
include/MLX/: MLX90640_API.h  MLX90640_I2C_Driver.h
src/: MLX90640_API.c  MLX90640_API.cpp  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.cpp  can.cpp  main.cpp  thermal_camera.cpp  thermal_pipline.cpp
src/MLX/: MLX90640_API.c  MLX90640_I2C_Driver.c
